[gd_scene load_steps=2 format=3 uid="uid://nbt6ye4hi2r8"]

[ext_resource type="Script" path="res://sandbox/networking/ConnectMenu.gd" id="1_p58kl"]

[node name="ConnectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p58kl")

[node name="Join" type="Button" parent="."]
offset_right = 44.0
offset_bottom = 31.0
focus_mode = 0
text = "Join"

[node name="Host" type="Button" parent="."]
offset_top = 33.0
offset_right = 44.0
offset_bottom = 64.0
focus_mode = 0
text = "Host
"

[node name="PlayerName" type="Label" parent="."]
offset_left = 5.0
offset_top = 65.0
offset_right = 73.0
offset_bottom = 91.0
text = "JohnTest"

[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
